--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,5 +1,6 @@
 .hero {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 40px;
@@ -9,8 +10,13 @@
 }
 
 .heroTitleContainer {
-    /* flex: 1; */
+    flex: 1;
     align-self: flex-start;
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
     /* display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,9 +32,28 @@
 }
 
 .heroLogoContainer {
-    min-width: 500px;
+    min-width: 400px;
+    max-width: 600px;
 }
 
 .heroLogo {
     width: 100%
+}
+
+ @media (max-width: 1244px) {
+    .heroTitleContainer {
+        h2 {
+            font-size: 1.8rem;
+        }
+    }
+    .heroTitle {
+        font-size: 6rem;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .heroTitle {
+        font-size: 4rem;
+    }
 }
