--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -7,6 +7,7 @@
     padding: 20px;
     width: 100%;
     height: 100vh;
+    min-height: 960px;
 }
 
 .heroTitleContainer {
@@ -52,6 +53,10 @@
 }
 
 @media (max-width: 768px) {
+    .hero {
+        gap: 20px;
+        align-content: flex-start;
+    }
 
     .heroTitle {
         font-size: 4rem;
