--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,13 +1,14 @@
 .hero {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     gap: 40px;
     padding: 20px;
     width: 100%;
     height: 100vh;
     min-height: 960px;
+    max-height: 1000px;
 }
 
 .heroTitleContainer {
@@ -38,10 +39,17 @@
 }
 
 .heroLogo {
-    width: 100%
+    width: 100%;
+    filter: grayscale(100%) contrast(0.5) brightness(1.2);
 }
 
  @media (max-width: 1244px) {
+    .heroLogoContainer {
+        min-width: 200px;
+        max-width: 400px;
+    }
+    
+
     .heroTitleContainer {
         h2 {
             font-size: 1.8rem;
@@ -52,12 +60,23 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 903px) {
     .hero {
+        flex-direction: column;
         gap: 20px;
         align-content: flex-start;
+    } 
+
+    .heroLogoContainer {
+        min-width: 200px;
+        max-width: 400px;
+        align-self: center;
     }
 
+    h1 {
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
     .heroTitle {
         font-size: 4rem;
     }
