--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   url('./assets/fonts/robot_slab/RobotoSlab.ttf') format("truetype")
 }
 
+#root {
+  width: 100%;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -22,8 +26,8 @@ html {
   /* background-color: #242424; */
 
   background: #141E30;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to bottom, #728983 0%, #010b0e 600px, #010b0e 100%);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #728983 0%, #010b0e 600px, #010b0e 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   
 
   font-synthesis: none;
@@ -37,8 +41,8 @@ body {
 }
 
 main {
-  background: url("./assets/imgs/main_background.webp") no-repeat center top;
-  height: 4400px;
+  /* background: url("./assets/imgs/main_background.webp") no-repeat center top; */
+  /* height: 4400px; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -47,10 +51,26 @@ main {
   margin: 0 auto;
   min-width: 360px;
   min-height: 100vh;
+  max-width: 2560px;
   overflow: hidden;
+  position: relative;
   
-  padding-bottom: 20px;;
+  padding-bottom: 20px;
 }
+
+/* main::before {
+  background: url("./assets/imgs/main_background_small.webp") no-repeat center top;
+  background-size: cover;
+  content: " ";
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  max-width: 2560px;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+} */
 
 a {
   font-weight: 500;
@@ -104,4 +124,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+/* Estados de carga del background */
+main.background-loading {
+  opacity: 0.5;
+  transition: opacity 0.5s ease-in-out;
+}
+
+main.background-loaded {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
