--- a/src/app.module.css
+++ b/src/app.module.css
@@ -126,6 +126,15 @@
   }
 }
 
+.footerBackground {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 70%;
+    aspect-ratio: 16/9;
+    z-index: -1;
+}
+
 @media (max-width: 500px) {
   .sectionContainer {
     padding: 10px 20px 20px 20px;
