--- a/src/app.module.css
+++ b/src/app.module.css
@@ -133,6 +133,7 @@
     width: 70%;
     aspect-ratio: 16/9;
     z-index: -1;
+    mask-image: radial-gradient(ellipse at bottom right, black 40%, transparent 80%);
 }
 
 @media (max-width: 500px) {
